Refactoring GMM solvers to avoid duplicate code

--- a/interactive_example.ipynb
+++ b/interactive_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "1cddf967-1d0d-497c-a3e9-304c2d366f24",
    "metadata": {
     "pycharm": {
@@ -22,8 +22,12 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
     "import gmm\n",
+    "import gmm_gumbel\n",
+    "\n",
     "from example import plot\n",
-    "from gumbel_regression import *\n",
+    "from gumbel_regression import gumbel_stable_loss\n",
+    "\n",
+    "from example import create_data_1\n",
     "\n",
     "def create_data():\n",
     "    np.random.seed(0)\n",
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "6f75bf9f-29ec-4d9d-a76a-022aca1b6caf",
    "metadata": {
     "pycharm": {
@@ -54,225 +58,19 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loss: tensor(-2.6158, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-2.6120, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-1.8611, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-1.2360, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-0.8115, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-0.5083, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-0.3075, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-0.1919, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-0.1116, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-0.0646, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-0.0230, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(-0.0092, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0029, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0091, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0094, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0095, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0095, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0095, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0095, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0095, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0095, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0096, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0104, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0104, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0105, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0111, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0071, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n",
-      "Loss: tensor(0.0053, dtype=torch.float64, grad_fn=<MeanBackward0>) \n",
-      "\n"
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 67\u001b[0m\n\u001b[1;32m     62\u001b[0m         g_fitter\u001b[38;5;241m.\u001b[39mupdate_var(var)\n\u001b[1;32m     64\u001b[0m     writer\u001b[38;5;241m.\u001b[39mclose()\n\u001b[0;32m---> 67\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[6], line 18\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m K \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m\n\u001b[1;32m     17\u001b[0m D \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m---> 18\u001b[0m data, true_y \u001b[38;5;241m=\u001b[39m create_data_1(N\u001b[38;5;241m=\u001b[39mN, K\u001b[38;5;241m=\u001b[39mK, D\u001b[38;5;241m=\u001b[39mD)\n\u001b[1;32m     19\u001b[0m N \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n\u001b[1;32m     20\u001b[0m g_fitter \u001b[38;5;241m=\u001b[39m gmm_gumbel\u001b[38;5;241m.\u001b[39mGaussianMixtureGumbel(n_components\u001b[38;5;241m=\u001b[39mK, n_features\u001b[38;5;241m=\u001b[39mD)\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
    "source": [
-    "def gumbel_stable_loss(z, clip=None):\n",
-    "    if clip is not None:\n",
-    "        z = torch.clamp(z, max=clip)\n",
-    "\n",
-    "    max_z = torch.max(z)\n",
-    "    max_z = torch.where(max_z < -1.0, torch.tensor(-1.0, dtype=torch.double, device=max_z.device), max_z)\n",
-    "    max_z = max_z.detach()  # Detach the gradients\n",
-    "    \n",
-    "    # scale by e^max_z\n",
-    "    loss = torch.exp(z - max_z) - z * torch.exp(-max_z) - torch.exp(-max_z)\n",
-    "    return loss\n",
-    "\n",
     "def loss_fn(V, logP):\n",
     "    # loss = gumbel_stable_loss(logP - V, clip=10) # + logP\n",
     "\n",
@@ -287,11 +85,12 @@
     "\n",
     "\n",
     "def main():\n",
-    "    data, true_y = create_data2()\n",
-    "    n = len(data)\n",
-    "    d = data.shape[1]\n",
-    "    k = 2\n",
-    "    g_fitter = gmm.GaussianMixture(n_components=k, n_features=d)\n",
+    "    N = 300\n",
+    "    K = 4\n",
+    "    D = 2\n",
+    "    data, true_y = create_data_1(N=N, K=K, D=D)\n",
+    "    N = len(data)\n",
+    "    g_fitter = gmm_gumbel.GaussianMixtureGumbel(n_components=K, n_features=D)\n",
     "    max_iter = 100\n",
     "    writer = SummaryWriter()\n",
     "    \n",
@@ -344,12 +143,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f048adf1-8b5f-45f8-a00f-d3101731625b",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "id": "cbb79b26-060d-4e13-886d-70a15989aba6",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
